[#5-REFACTOR] fixed extra margin and added on hover scale feature for button

--- a/src/app/components/account-change-password/account-change-password-main/account-change-password-main.component.scss
+++ b/src/app/components/account-change-password/account-change-password-main/account-change-password-main.component.scss
@@ -32,12 +32,17 @@
     button {
         background: linear-gradient(to bottom right, #373d69, #16192b);
         border-radius: .5rem;
+        transition: transform 0.3s;
 
         p {
             letter-spacing: .005rem;
             color: white;
             font-size: 12px;
             font-weight: 700;
+        }
+
+        &:hover {
+            transform: scale(1.03);
         }
     }
 }
